project/project.sdk/.metadata/.plugins/org.eclipse.cdt.ui/project_code.build.log
18:07:16 **** Auto Build of configuration Debug for project project_code ****
make pre-build main-build 
a9-linaro-pre-build-step
 
Building file: ../src/main.c
Invoking: ARM v7 gcc compiler
arm-none-eabi-gcc -Wall -O0 -g3 -c -fmessage-length=0 -MT"src/main.o" -mcpu=cortex-a9 -mfpu=vfpv3 -mfloat-abi=hard -I../../project_code_bsp/ps7_cortexa9_0/include -MMD -MP -MF"src/main.d" -MT"src/main.o" -o "src/main.o" "../src/main.c"
In file included from ../../project_code_bsp/ps7_cortexa9_0/include/xgpio.h:135:0,
                 from ../src/main.c:52:
../src/main.c: In function 'init_btn':
../../project_code_bsp/ps7_cortexa9_0/include/xstatus.h:65:41: warning: 'return' with a value, in function returning void
 #define XST_FAILURE                     1L
                                         ^
../src/main.c:140:35: note: in expansion of macro 'XST_FAILURE'
  if(status != XST_SUCCESS) return XST_FAILURE;
                                   ^~~~~~~~~~~
../src/main.c:137:6: note: declared here
 void init_btn() {
      ^~~~~~~~
../src/main.c: In function 'init_rtcc':
../src/main.c:158:4: warning: implicit declaration of function 'EnableCaches' [-Wimplicit-function-declaration]
    EnableCaches();
    ^~~~~~~~~~~~
../src/main.c: In function 'SetTime':
../src/main.c:304:21: error: 'myDevice' undeclared (first use in this function)
       RTCC_setYear(&myDevice, val.year);
                     ^~~~~~~~
../src/main.c:304:21: note: each undeclared identifier is reported only once for each function it appears in
../src/main.c: At top level:
../src/main.c:430:6: warning: conflicting types for 'EnableCaches'
 void EnableCaches() {
      ^~~~~~~~~~~~
../src/main.c:158:4: note: previous implicit declaration of 'EnableCaches' was here
    EnableCaches();
    ^~~~~~~~~~~~
../src/main.c: In function 'InitializeThermostat':
../src/main.c:460:4: error: too few arguments to function 'init_rtcc'
    init_rtcc();
    ^~~~~~~~~
../src/main.c:155:6: note: declared here
 void init_rtcc(u8 mode) {
      ^~~~~~~~~
../src/main.c: In function 'RunThermostat':
../src/main.c:609:30: error: 'myDevice' undeclared (first use in this function)
          if (RTCC_checkFlag(&myDevice, RTCC_TARGET_ALM0)) {
                              ^~~~~~~~
At top level:
../src/main.c:401:6: warning: 'BTN_Intr_Handler' defined but not used [-Wunused-function]
 void BTN_Intr_Handler(void *InstancePtr)
      ^~~~~~~~~~~~~~~~
../src/main.c:132:12: warning: 'temp_current' defined but not used [-Wunused-variable]
 static int temp_current;
            ^~~~~~~~~~~~
make: *** [src/main.o] Error 1
src/subdir.mk:24: recipe for target 'src/main.o' failed

18:07:17 Build Finished (took 313ms)

